# qsalto

./: .gitignore  README.md  pyproject.toml  test.ipynb
.github/workflows/: publish-python-testpypi.yml  publish-python.yml  run-tests.yml
docs/: index.html  paper.html
docs/css/: diagram.css  formulas.css  main.css
docs/js/: add-arrows.js  main.js
docs/media/: browserconfig.xml
src/qsalto/: __init__.py  matrices.py  mp_not_available.py  naive_matrices.py  single_entry.py  single_entry_precise.py
src/salto/: __init__.py  matrices.py  naive_matrices.py  single_entry.py  single_shot.py
tests/: test_matrices.py
